fix: VoidHeart duplicate flexions